fixed height on firefox

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -25,5 +25,5 @@ a {
 
 .react-transform-component{
 	width: 100%;
-	height: 86vh;
+	height: 80vh;
 }
